--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "laravel/socialite": "^2.0",
         "barryvdh/laravel-ide-helper": "^2.1",
         "barryvdh/laravel-debugbar": "^2.2",
-        "acacha/admin-lte-template-laravel": "^2.0"
+        "acacha/admin-lte-template-laravel": "^2.0",
+        "laravel/cashier": "^6.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
