--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "barryvdh/laravel-ide-helper": "^2.1",
         "barryvdh/laravel-debugbar": "^2.2",
         "acacha/admin-lte-template-laravel": "^2.0",
-        "laravel/cashier": "^6.0"
+        "laravel/cashier": "^6.0",
+        "dompdf/dompdf": "^0.6.2"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
